# 20240419_rust-for-python-programmers

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
demos_python/01_hello_world/: main.py
demos_python/02_console_input/: main.py
demos_python/03_error_handling/: main.py
demos_python/04_int_input/: main.py
demos_python/05_int_input_enhanced/: main.py
demos_python/06_color_class/: main.py
demos_python/07_color_methods/: main.py
demos_python/08_modules/: main.py
demos_python/09_list/: main.py
demos_python/10_command_loop/: main.py
demos_python/11_color_tool/: color.py  main.py
demos_python/12_color_tool_refactor/: color_tool_app.py  command_loop.py  main.py
demos_python/13_generic_function/: main.py
demos_python/14_range/: main.py
demos_python/15_shopping_cart/: main.py
demos_python/16_json_file/: main.py
demos_python/17_json_file_refactor/: main.py  person.py  person_json_file_store.py  person_store.py  person_store_factory.py  person_xml_file_store.py
demos_rust/: README.md
demos_rust/02_console_input/: Cargo.toml
demos_rust/04_int_input/: Cargo.toml
demos_rust/05_int_input_enhanced/: Cargo.toml
demos_rust/06_color_struct/: Cargo.toml
demos_rust/07_color_impl/: Cargo.toml
demos_rust/10_command_loop/: Cargo.toml
demos_rust/11_color_tool/: Cargo.toml
demos_rust/12_color_tool_refactor/: Cargo.toml
demos_rust/13_generic_function/: Cargo.toml
demos_rust/14_range/: Cargo.toml
demos_rust/15_shopping_cart/: Cargo.toml
demos_rust/16_json_file/: Cargo.toml
exercises/: README.md
(+53 files in other folders)
